Added error object in swagger
